Closed Bug 1296911 Opened 8 years ago Closed 8 years ago

OpenGL compositing on Linux results in lower animations performance

Categories

(Core :: Graphics, defect)

51 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: marian.domanik, Assigned: acomminos)

References

Details

Attachments

(2 files)

Attached file firefox.txt
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:51.0) Gecko/20100101 Firefox/51.0
Build ID: 20160820030224

Steps to reproduce:

Updated Nightly to latest 51 2016-08-20


Actual results:

Since Linux Nightly now support hardware compositing layers, about:support confirms it - attached, the scrolling and animations performance is now worse and drops by tens FPS.

The performance drop is clearly observable, but Performance in Developer tools confirms it, when scroling with hardware acceleration disabled, it almost never drops under 50FPS, now with scrolling it can get as low as 20FPS.


Expected results:

I expected performance improvements, not regression.
OS: Unspecified → Linux
Hardware: Unspecified → x86_64
Can you provide the URL of some testcase?
Where does the issue happen?
Flags: needinfo?(marian.domanik)
(In reply to Tooru Fujisawa [:arai] from comment #1)
> Can you provide the URL of some testcase?
> Where does the issue happen?

Every single page. Scrolling on every page is now visibly worse when smooth scrolling is enabled as well as animations across the browser, opening/closing a tab animation or opening the options panel
I've tested on https://www.mozilla.org/en-US/firefox/nightly/firstrun/
(if the issue doesn't happen there, please tell me the URL you've tested)

Here's regression range:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8ef9629d8f90d6507b1bad01146b14101de79174&tochange=30fa88c82366a358f412ca2cc3268142c8991f0d

maybe from bug 594876 ?
Status: UNCONFIRMED → NEW
Component: Untriaged → Graphics
Ever confirmed: true
Flags: needinfo?(marian.domanik)
Product: Firefox → Core
See Also: → ogl-linux-beta
That page is too short to test scrolling animation, I've recorded performance profiles with and without hardware acceleration, but they're over 3MB. With HW acceleration, average FPS can go under 30, without acceleration, it's always above 50. The tested page was http://www.imdb.com , confirmed at http://www.facebook.com (logged in obviously), and this page of this bug as well. Do you want all profiles with/without acceleration for each of this page attached?

Again, there's NO SPECIFIC page where it happens - it happens on ALL OF THEM including the animations inside the browser as well.
Could you please try setting the pref 'layout.frame_rate' to your monitor's refresh rate (likely 60)? I'm looking into an issue where our VSync timing may be incorrect on the Intel DDX driver.

Thanks!
Flags: needinfo?(marian.domanik)
(In reply to Andrew Comminos [:acomminos] from comment #6)
> Could you please try setting the pref 'layout.frame_rate' to your monitor's
> refresh rate (likely 60)? I'm looking into an issue where our VSync timing
> may be incorrect on the Intel DDX driver.
> 
> Thanks!

Huge improvement! Seems like this fixed it - I have set layout.frame_rate to 60 (original value "-1"), everything is smooth again. Is there anything else I can provide?
Thanks. I've managed to work around this issue by using a separate X display (again) for the VSync thread; this should also fix bug 1293474.
Flags: needinfo?(marian.domanik)
See Also: → 1293474
Assignee: nobody → andrew
Status: NEW → ASSIGNED
Comment on attachment 8783646 [details]
Bug 1296911 - Use a separate X display on the GLX VSync thread.

https://reviewboard.mozilla.org/r/73372/#review71150
Attachment #8783646 - Flags: review?(lsalzman) → review+
Pushed by acomminos@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/12e1787d70fd
Use a separate X display on the GLX VSync thread. r=lsalzman
https://hg.mozilla.org/mozilla-central/rev/12e1787d70fd
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: