Bug 1296911 - Use a separate X display on the GLX VSync thread. r=lsalzman

This reverts commit cce8e136869d313e999fdd0b98c88dfa3603c3de.